[package]
name = "fileview"
version = "0.1.0"
authors = ["Benedikt Radtke <benediktradtke@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "memoryapi", "sysinfoapi", "minwindef"] }

[build-dependencies]
cc = "1.0"
